어린이집, 유치원 검색 찜 / 이다영 / 02-08 23:33
[주요 내용]

- 하트 버튼 css 추가 및 수정
	kinder-nursery.css

- 어린이집
	nursery-main.html / nursery-mapper.xml / NurseryController.java /
	NurseryMapper.java / NurseryService.java

- 유치원
	kinder-main.html / kinder-mapper.xml / KinderController.java /
	KinderMapper.java / KinderService.java

--- a/src/main/resources/static/css/kinder-nursery.css
+++ b/src/main/resources/static/css/kinder-nursery.css
@@ -121,7 +121,8 @@
     border-radius: 50%;
     text-align: center;
     width:25px; 
-    height: 25px; 
+    height: 25px;
+    line-height: 25px; 
     background-color: white; 
     margin-right: 5px; 
     margin-top: 5px; 
@@ -265,3 +266,9 @@
     position: relative;
     left: 95px;
   }
+ #heart {
+ 	margin-top: 6px;
+ }
+  .ci-heart-filled {
+  color: #f5104d;
+}
