불편사항신고목록(미완성) 추가 / 조규완 / 02-09 00:11 [상세내용] mypage.html - 기본적인 ui개선 mypage.java - 불편사항 목록 추가 (미완성)

--- a/src/main/resources/static/css/cgw.css
+++ b/src/main/resources/static/css/cgw.css
@@ -303,6 +303,11 @@
   	border: none; 
   	background-color: white;
   }
+  
+  .cgw31 {
+    margin-right: 2rem !important;
+    margin-left: 2rem !important;
+  }
 
   .btn-primary-cgw1 {
     color: rgb(255, 255, 255);
