--- a/src/main/resources/templates/mypage-2.html
+++ b/src/main/resources/templates/mypage-2.html
@@ -130,10 +130,8 @@
 				<!-- Content  -->
 				<section class="col-lg-8">
 					<!-- Toolbar-->
-					<div
-						class="d-none d-lg-flex justify-content-between align-items-center pb-4 cgw7 mb-lg-3">
-						<h6 class="fs-change cgw4 mb-0 fw-bold" style="color: #fc6c93;">입소
-							신청 조회</h6>
+					<div class="d-none d-lg-flex justify-content-between align-items-center pb-4 cgw7 mb-lg-3">
+						<h6 class="fs-change cgw4 mb-0 fw-bold" style="color: #fc6c93;">입소 신청 조회</h6>
 					</div>
 					<!-- 어린이집 입소 신청 목록-->
 					<!-- <form id="enroll-container" action="/member/update" method="post"> -->
