--- a/src/main/resources/templates/mypage-5.html
+++ b/src/main/resources/templates/mypage-5.html
@@ -142,7 +142,7 @@
 							쓴 게시글</h6>
 					</div>
 					<!-- 어린이집 입소 신청 목록-->
-          <div class="table-responsive fs-md mb-4 ms-4">
+          <div class="table-responsive fs-md mb-4">
             <table class="table table-hover mb-0">
               <thead>
                 <tr>
