--- a/src/main/resources/templates/mypage-6.html
+++ b/src/main/resources/templates/mypage-6.html
@@ -151,7 +151,7 @@
 						<h6 class="fs-change cgw4 mb-0 fw-bold" style="color: #fc6c93;">대여 내역 조회</h6>
 					</div>
 					
-          <div class="table-responsive fs-md mb-4 ms-4">
+          <div class="table-responsive fs-md mb-4">
             <table class="table table-hover mb-0">
               <thead>
                 <tr>
