--- a/src/main/resources/templates/mypage-3.html
+++ b/src/main/resources/templates/mypage-3.html
@@ -142,20 +142,21 @@
 						class="d-none d-lg-flex justify-content-between align-items-center pb-4 cgw7 mb-lg-3">
 						<h6 class="fs-change cgw4 mb-0 fw-fold" style="color: #fc6c93;">찜</h6>
 					</div>
-					<!-- 찜content -->
-					<div class="pt-2 px-4 ps-lg-0 pe-xl-5 ms-5">
-
+			<!-- 어린이집 찜content -->
+			<div class="pt-2 px-4 ps-lg-0 pe-xl-5 ms-5">
 			
             <!-- Items grid-->
             <div class="row row-cols-md-3 row-cols-sm-2 row-cols-1 gy-sm-4 gy-3 gx-3 mb-4">
+            <h5 class="v-line ps-2">어린이집 찜 목록</h5> <br>
               <!-- Product-->
-              <th:block th:if="${list == null}">
+              <div></div><div></div>
+              <th:block th:if="${nlist == null}">
 				<tr>
 					<div>조회된 찜 목록이 없습니다.</div>
 				</tr>
 			  </th:block>
-			  <th:block th:if="${list != null}">
-			  <th:block th:each="wish, stat : ${list}">
+			  <th:block th:if="${nlist != null}">
+			  <th:block th:each="nwish, stat : ${nlist}">
 			  
               <div class="col mb-2">
                 <article class="card h-100 border-0 shadow">
@@ -169,8 +170,8 @@
                   <a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">
                     <div class="card-footer mt-n1 py-0 border-0 mb-3">
                       <div class="d-flex align-items-center position-relative py-3 mt-2">
-                      	<a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">[[${wish.knname}]]</a></div>
-                        <i class="ci-location me-2 cgw16 fs-ms cgw27"></i><div class="fs-ms text-muted cgw24">[[${wish.knaddr}]]</div>
+                      	<a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">[[${nwish.knName}]]</a></div>
+                        <i class="ci-location me-2 cgw16 fs-ms cgw27"></i><div class="fs-ms text-muted cgw24">[[${nwish.knAddr}]]</div>
                       </div>
                     </a>
                   </article>
@@ -184,7 +185,70 @@
             <button class="btn btn-outline-danger"><i class="ci-trash me-2"></i>전체 삭제</button>
           </div>
           <!-- pagination -->
-          <nav class="d-flex justify-content-between pt-2" aria-label="Page navigation">
+          <nav class="d-flex justify-content-between pt-2 cgw31" aria-label="Page navigation">
+            <ul class="pagination">
+              <li class="page-item"><a class="page-link" href="#"><i class="ci-arrow-left me-2"></i>Prev</a></li>
+            </ul>
+            <ul class="pagination">
+              <li class="page-item d-sm-none"><span class="page-link page-link-static">1 / 5</span></li>
+              <li class="page-item page d-none d-sm-block" aria-current="page"><span class="page-link">1<span
+                    class="visually-hidden">(current)</span></span></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">2</a></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">3</a></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">4</a></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">5</a></li>
+            </ul>
+            <ul class="pagination">
+              <li class="page-item"><a class="page-link" href="#" aria-label="Next">Next<i
+                    class="ci-arrow-right ms-2"></i></a></li>
+            </ul>
+          </nav>
+          <br><br>
+          
+          <!-- 유치원 찜content -->
+			<div class="pt-2 px-4 ps-lg-0 pe-xl-5 ms-5">
+			
+            <!-- Items grid-->
+            <div class="row row-cols-md-3 row-cols-sm-2 row-cols-1 gy-sm-4 gy-3 gx-3 mb-4">
+            <h5 class="v-line ps-2">유치원 찜 목록</h5> <br>
+              <!-- Product-->
+              <div></div><div></div>
+              <th:block th:if="${klist == null}">
+				<tr>
+					<div>조회된 찜 목록이 없습니다.</div>
+				</tr>
+			  </th:block>
+			  <th:block th:if="${klist != null}">
+			  <th:block th:each="kwish, stat : ${klist}">
+			  
+              <div class="col mb-2">
+                <article class="card h-100 border-0 shadow">
+                  <div class="card-img-top position-relative overflow-hidden"><a class="d-block"
+                      href="nft-single-buy.html"><img src="img/ukids/nursery.JPG" alt="Product image"></a>
+                    <!-- Wishlist button-->
+                    <button class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0" type="button"
+                      data-bs-toggle="tooltip" data-bs-placement="top" title="Remove from favorites"
+                      style="margin: 12px;"><i class="ci-heart-filled"></i></button>
+                  </div>
+                  <a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">
+                    <div class="card-footer mt-n1 py-0 border-0 mb-3">
+                      <div class="d-flex align-items-center position-relative py-3 mt-2">
+                      	<a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">[[${kwish.knName}]]</a></div>
+                        <i class="ci-location me-2 cgw16 fs-ms cgw27"></i><div class="fs-ms text-muted cgw24">[[${kwish.knAddr}]]</div>
+                      </div>
+                    </a>
+                  </article>
+                </div>
+                </th:block>
+              
+                </th:block>
+              
+            </div>
+            
+            <button class="btn btn-outline-danger"><i class="ci-trash me-2"></i>전체 삭제</button>
+          </div>
+          <!-- pagination -->
+          <nav class="d-flex justify-content-between pt-2 cgw31" aria-label="Page navigation">
             <ul class="pagination">
               <li class="page-item"><a class="page-link" href="#"><i class="ci-arrow-left me-2"></i>Prev</a></li>
             </ul>
