--- a/src/main/resources/templates/mypage-7.html
+++ b/src/main/resources/templates/mypage-7.html
@@ -227,7 +227,8 @@
 								</th:block>
 								</div>
 								<div class="mt-lg-3 cgw9">
-									<button class="btn btn-primary-cgw2 btn-sm mx-2" type="button">상품계속보기</button>
+									<button class="btn btn-primary-cgw2 btn-sm mx-2" type="button"
+									th:onclick="|location.href='@{/toy-main}'|">상품계속보기</button>
 									<button class="btn btn-primary-cgw1 btn-sm mx-2" type="button" 
 									th:onclick="|location.href='@{/pay}'|">&nbsp;&nbsp;대여하기&nbsp;&nbsp;</button>
 								</div>
